Implemented optimized gradient boosting library xgboost

--- a/Part 10 - Model Selection & Boosting/Section 49 - XGBoost/xg_boost.ipynb
+++ b/Part 10 - Model Selection & Boosting/Section 49 - XGBoost/xg_boost.ipynb
@@ -1,1 +1,193 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"xg_boost.ipynb","provenance":[],"collapsed_sections":[],"toc_visible":true,"authorship_tag":"ABX9TyPuuFI9DETSuUNcfBKFNz89"},"kernelspec":{"name":"python3","display_name":"Python 3"}},"cells":[{"cell_type":"markdown","metadata":{"id":"8FLud1n-3pVm"},"source":["# XGBoost"]},{"cell_type":"markdown","metadata":{"id":"sO8VPU6n3vES"},"source":["## Importing the libraries"]},{"cell_type":"code","metadata":{"id":"clDSsF7P33NU"},"source":["import numpy as np\n","import matplotlib.pyplot as plt\n","import pandas as pd"],"execution_count":null,"outputs":[]},{"cell_type":"markdown","metadata":{"id":"zGpwK5XD386E"},"source":["## Importing the dataset"]},{"cell_type":"code","metadata":{"id":"Zcksk88u4Ae8"},"source":["dataset = pd.read_csv('Data.csv')\n","X = dataset.iloc[:, :-1].values\n","y = dataset.iloc[:, -1].values"],"execution_count":null,"outputs":[]},{"cell_type":"markdown","metadata":{"id":"XNn2RnST6_Q-"},"source":["## Splitting the dataset into the Training set and Test set"]},{"cell_type":"code","metadata":{"id":"ajhBL-er7Gry"},"source":["from sklearn.model_selection import train_test_split\n","X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)"],"execution_count":null,"outputs":[]},{"cell_type":"markdown","metadata":{"id":"1Y89ctGZ7Mcx"},"source":["## Training XGBoost on the Training set"]},{"cell_type":"code","metadata":{"id":"ude1J0E47SKN"},"source":["from xgboost import XGBClassifier\n","classifier = XGBClassifier()\n","classifier.fit(X_train, y_train)"],"execution_count":null,"outputs":[]},{"cell_type":"markdown","metadata":{"id":"ivqmubzW7dFJ"},"source":["## Making the Confusion Matrix"]},{"cell_type":"code","metadata":{"id":"SUSZ3zm_7gRD"},"source":["from sklearn.metrics import confusion_matrix, accuracy_score\n","y_pred = classifier.predict(X_test)\n","cm = confusion_matrix(y_test, y_pred)\n","print(cm)\n","accuracy_score(y_test, y_pred)"],"execution_count":null,"outputs":[]},{"cell_type":"markdown","metadata":{"id":"EnbCjHgQ8XPn"},"source":["## Applying k-Fold Cross Validation"]},{"cell_type":"code","metadata":{"id":"yYbfiITD8ZAz"},"source":["from sklearn.model_selection import cross_val_score\n","accuracies = cross_val_score(estimator = classifier, X = X_train, y = y_train, cv = 10)\n","print(\"Accuracy: {:.2f} %\".format(accuracies.mean()*100))\n","print(\"Standard Deviation: {:.2f} %\".format(accuracies.std()*100))"],"execution_count":null,"outputs":[]}]}
+{
+ "nbformat": 4,
+ "nbformat_minor": 0,
+ "metadata": {
+  "colab": {
+   "name": "xg_boost.ipynb",
+   "provenance": [],
+   "collapsed_sections": [],
+   "toc_visible": true,
+   "authorship_tag": "ABX9TyPuuFI9DETSuUNcfBKFNz89"
+  },
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python"
+  }
+ },
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "8FLud1n-3pVm"
+   },
+   "source": [
+    "# XGBoost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "sO8VPU6n3vES"
+   },
+   "source": [
+    "## Importing the libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "clDSsF7P33NU",
+    "ExecuteTime": {
+     "end_time": "2025-12-17T07:54:54.256851Z",
+     "start_time": "2025-12-17T07:54:51.059992Z"
+    }
+   },
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd"
+   ],
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "zGpwK5XD386E"
+   },
+   "source": [
+    "## Importing the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "Zcksk88u4Ae8",
+    "ExecuteTime": {
+     "end_time": "2025-12-17T07:54:54.284987Z",
+     "start_time": "2025-12-17T07:54:54.266477Z"
+    }
+   },
+   "source": [
+    "dataset = pd.read_csv('Data.csv')\n",
+    "X = dataset.iloc[:, :-1].values\n",
+    "y = dataset.iloc[:, -1].values"
+   ],
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "XNn2RnST6_Q-"
+   },
+   "source": [
+    "## Splitting the dataset into the Training set and Test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "ajhBL-er7Gry",
+    "ExecuteTime": {
+     "end_time": "2025-12-17T07:54:57.766609Z",
+     "start_time": "2025-12-17T07:54:54.296448Z"
+    }
+   },
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)"
+   ],
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "1Y89ctGZ7Mcx"
+   },
+   "source": [
+    "## Training XGBoost on the Training set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "ude1J0E47SKN",
+    "ExecuteTime": {
+     "end_time": "2025-12-17T07:56:06.997862Z",
+     "start_time": "2025-12-17T07:56:06.709695Z"
+    }
+   },
+   "source": [
+    "from xgboost import XGBClassifier\n",
+    "classifier = XGBClassifier()\n",
+    "classifier.fit(X_train, y_train)"
+   ],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Invalid classes inferred from unique values of `y`.  Expected: [0 1], got [2 4]",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mValueError\u001B[39m                                Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[5]\u001B[39m\u001B[32m, line 3\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mxgboost\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m XGBClassifier\n\u001B[32m      2\u001B[39m classifier = XGBClassifier()\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m \u001B[43mclassifier\u001B[49m\u001B[43m.\u001B[49m\u001B[43mfit\u001B[49m\u001B[43m(\u001B[49m\u001B[43mX_train\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43my_train\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32mC:\\Wegmann\\00_Development\\99_Courses\\Machine Learning A-Z (Codes and Datasets)\\.venv\\Lib\\site-packages\\xgboost\\core.py:774\u001B[39m, in \u001B[36mrequire_keyword_args.<locals>.throw_if.<locals>.inner_f\u001B[39m\u001B[34m(*args, **kwargs)\u001B[39m\n\u001B[32m    772\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m k, arg \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mzip\u001B[39m(sig.parameters, args):\n\u001B[32m    773\u001B[39m     kwargs[k] = arg\n\u001B[32m--> \u001B[39m\u001B[32m774\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mfunc\u001B[49m\u001B[43m(\u001B[49m\u001B[43m*\u001B[49m\u001B[43m*\u001B[49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32mC:\\Wegmann\\00_Development\\99_Courses\\Machine Learning A-Z (Codes and Datasets)\\.venv\\Lib\\site-packages\\xgboost\\sklearn.py:1761\u001B[39m, in \u001B[36mXGBClassifier.fit\u001B[39m\u001B[34m(self, X, y, sample_weight, base_margin, eval_set, verbose, xgb_model, sample_weight_eval_set, base_margin_eval_set, feature_weights)\u001B[39m\n\u001B[32m   1756\u001B[39m     expected_classes = \u001B[38;5;28mself\u001B[39m.classes_\n\u001B[32m   1757\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m (\n\u001B[32m   1758\u001B[39m     classes.shape != expected_classes.shape\n\u001B[32m   1759\u001B[39m     \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m (classes == expected_classes).all()\n\u001B[32m   1760\u001B[39m ):\n\u001B[32m-> \u001B[39m\u001B[32m1761\u001B[39m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[32m   1762\u001B[39m         \u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mInvalid classes inferred from unique values of `y`.  \u001B[39m\u001B[33m\"\u001B[39m\n\u001B[32m   1763\u001B[39m         \u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mExpected: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mexpected_classes\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m, got \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mclasses\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m\"\u001B[39m\n\u001B[32m   1764\u001B[39m     )\n\u001B[32m   1766\u001B[39m params = \u001B[38;5;28mself\u001B[39m.get_xgb_params()\n\u001B[32m   1768\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mcallable\u001B[39m(\u001B[38;5;28mself\u001B[39m.objective):\n",
+      "\u001B[31mValueError\u001B[39m: Invalid classes inferred from unique values of `y`.  Expected: [0 1], got [2 4]"
+     ]
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "ivqmubzW7dFJ"
+   },
+   "source": [
+    "## Making the Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "SUSZ3zm_7gRD"
+   },
+   "source": [
+    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
+    "y_pred = classifier.predict(X_test)\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "print(cm)\n",
+    "accuracy_score(y_test, y_pred)"
+   ],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "EnbCjHgQ8XPn"
+   },
+   "source": [
+    "## Applying k-Fold Cross Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "yYbfiITD8ZAz"
+   },
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "accuracies = cross_val_score(estimator = classifier, X = X_train, y = y_train, cv = 10)\n",
+    "print(\"Accuracy: {:.2f} %\".format(accuracies.mean()*100))\n",
+    "print(\"Standard Deviation: {:.2f} %\".format(accuracies.std()*100))"
+   ],
+   "execution_count": null,
+   "outputs": []
+  }
+ ]
+}
